<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/search"/>

    <item
        android:id="@+id/menu_favorite"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_favorite_white_24dp"
        android:title="@string/favorite"/>

    <item
        android:id="@+id/menu_change_language"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_settings_white_24dp"
        android:title="@string/change_language"/>
</menu>