<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/viewParent"
    tools:context=".ui.activity.DetailMovieActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="312dp"
        android:background="@android:color/white"
        android:theme="@style/ThemeOverlay.AppCompat.Light"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:contentScrim="@color/white"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax">
                <ImageView
                    android:id="@+id/imgBackdrop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/image_background"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:layout_height="312dp"
                    android:background="@android:color/black"
                    android:alpha="0.7"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="72dp"
                    android:background="@drawable/bg_expand_toolbar"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/placeholder"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <ImageView
                    android:id="@+id/imgPoster"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:minHeight="180dp"
                    android:adjustViewBounds="true"
                    android:layout_margin="16dp"
                    android:background="@color/white"
                    android:contentDescription="@string/poster_image"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_toEndOf="@id/imgPoster"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:fontFamily="@font/roboto_bold"
                    android:textColor="@color/white"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    app:layout_constraintTop_toTopOf="@id/imgPoster"
                    app:layout_constraintLeft_toRightOf="@id/imgPoster"
                    app:layout_constraintRight_toRightOf="parent"
                    tools:text="Avenger Infinity War"/>

                <TextView
                    android:id="@+id/tvDateRelease"
                    android:layout_below="@id/tvTitle"
                    android:layout_toEndOf="@id/imgPoster"
                    android:layout_marginTop="8dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    app:layout_constraintTop_toBottomOf="@id/tvTitle"
                    app:layout_constraintLeft_toRightOf="@id/imgPoster"
                    app:layout_constraintRight_toRightOf="parent"
                    android:textSize="16sp"
                    android:fontFamily="@font/roboto_light"
                    android:textColor="@color/white"
                    tools:text="10 December 2018"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.Dark"
                app:layout_scrollFlags="scroll|enterAlways"
                app:layout_collapseMode="pin"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_expand_toolbar"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtOverview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_margin="16dp"
                android:textColor="@color/black21"
                android:fontFamily="@font/roboto_bold"
                android:textSize="16sp"
                android:text="@string/overview"/>

            <TextView
                android:id="@+id/tvOverview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="32dp"
                app:layout_constraintStart_toStartOf="@+id/txtOverview"
                app:layout_constraintTop_toBottomOf="@+id/txtOverview"
                tools:text="Lorem ipsum..." />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <FrameLayout
        android:id="@+id/frameLoading"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_gravity="center"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:lottie_rawRes="@raw/loading_open_box"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"/>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/frameError"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/background">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieError"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:adjustViewBounds="true"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/error_network"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/tvError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/black21"
            android:text="@string/cant_connect"
            android:layout_marginTop="16dp"/>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>